[package]
name = "website_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csr = "0.8.2"
html-escape = "0.2.13"
leptos = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
ssr = "0.0.6"
styled = "0.1.41"
stylist = "0.12.1"
yew = "0.20.0"
